--- a/Kompose/app/src/main/res/layout/activity_playlist.xml
+++ b/Kompose/app/src/main/res/layout/activity_playlist.xml
@@ -4,117 +4,172 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
+
+        <import type="android.view.View" />
+
+        <import type="ch.ethz.inf.vs.kompose.enums.SessionStatus" />
+
         <variable
             name="viewModel"
             type="ch.ethz.inf.vs.kompose.view.viewmodel.PlaylistViewModel" />
     </data>
 
-    <!-- add buttons: leave party, view history, submit song -->
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="horizontal">
 
-
-        <RelativeLayout
-            android:id="@+id/currently_playing"
-            android:layout_width="match_parent"
-            android:layout_height="40pt"
-            android:padding="3pt"
-            android:layout_margin="3pt"
-            android:background="#efefef"
-            android:visibility="@{viewModel.sessionModel.currentlyPlaying == null ? View.GONE : View.VISIBLE}"
-            >
-
-            <ImageView
-                android:id="@+id/image"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:contentDescription="@string/thumbnail"
-                android:src="@{viewModel.sessionModel.currentlyPlaying.thumbnail}"
-                android:layout_alignParentStart="true"
-                />
-
-            <RelativeLayout
-                android:id="@+id/currently_playing_description"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_toEndOf="@id/image"
-                android:layout_toStartOf="@id/play_button_wrapper"
-                android:orientation="vertical">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/currently_playing_title"
-                    android:text="@{viewModel.sessionModel.currentlyPlaying.title}"
-                    tools:text="George Ezra - Listen to the Man"
-                    android:textColor="#000" />
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:id="@+id/currently_playing_seconds_length"
-                    android:text="@{String.valueOf(viewModel.sessionModel.currentlyPlaying.secondsLength)}"
-                    tools:text="300"
-                    android:layout_below="@id/currently_playing_title"
-                    />
-
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        tools:text="proposed by "
-                        android:text="@string/proposed_by"
-                        />
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:id="@+id/currently_playing_seconds_proposed_by_name"
-                        android:text="@{viewModel.sessionModel.currentlyPlaying.proposedBy.name}"
-                        tools:text="client"
-                        />
-                </LinearLayout>
-            </RelativeLayout>
-            <RelativeLayout
-                android:id="@+id/play_button_wrapper"
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_alignParentEnd="true">
-
-                <Button
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentStart="true"
-                    android:onClick="@{viewModel.onPlayClicked}"
-                    android:text="@string/play" />
-
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/list"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10pt"
-            android:layout_marginLeft="3pt"
-            android:layout_marginRight="3pt"
-            tools:listitem="@layout/in_queue_song_view"
-            >
+            android:orientation="vertical"
+            android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.WAITING) ? View.GONE : View.VISIBLE}"
+            tools:visibility="gone">
 
-        </android.support.v7.widget.RecyclerView>
 
+            <RelativeLayout
+                android:id="@+id/currently_playing"
+                android:layout_width="match_parent"
+                android:layout_height="40pt"
+                android:layout_margin="3pt"
+                android:background="#efefef"
+                android:padding="3pt"
+                android:visibility="@{viewModel.sessionModel.currentlyPlaying != null ? View.VISIBLE : View.GONE}">
+
+                <ImageView
+                    android:id="@+id/image"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentStart="true"
+                    android:contentDescription="@string/thumbnail"
+                    android:src="@{viewModel.sessionModel.currentlyPlaying.thumbnail}" />
+
+                <RelativeLayout
+                    android:id="@+id/currently_playing_description"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_toEndOf="@id/image"
+                    android:layout_toStartOf="@id/play_button_wrapper"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/currently_playing_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewModel.sessionModel.currentlyPlaying.title}"
+                        android:textColor="#000"
+                        tools:text="George Ezra - Listen to the Man" />
+
+                    <TextView
+                        android:id="@+id/currently_playing_seconds_length"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_below="@id/currently_playing_title"
+                        android:text="@{String.valueOf(viewModel.sessionModel.currentlyPlaying.secondsLength)}"
+                        tools:text="300" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@string/proposed_by"
+                            tools:text="proposed by " />
+
+                        <TextView
+                            android:id="@+id/currently_playing_seconds_proposed_by_name"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="@{viewModel.sessionModel.currentlyPlaying.proposedBy.name}"
+                            tools:text="client" />
+                    </LinearLayout>
+                </RelativeLayout>
+
+                <RelativeLayout
+                    android:id="@+id/play_button_wrapper"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true">
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"
+                        android:enabled="@{viewModel.sessionModel.isHost}"
+                        android:onClick="@{viewModel.onPlayClicked}"
+                        android:text="@string/play"
+                        android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.PAUSED) ? View.VISIBLE : View.GONE}" />
+
+                    <Button
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentStart="true"
+                        android:enabled="@{viewModel.sessionModel.isHost}"
+                        android:onClick="@{viewModel.onPauseClicked}"
+                        android:text="@string/pause"
+                        android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.PLAYING) ? View.VISIBLE : View.GONE}" />
+
+                </RelativeLayout>
+
+            </RelativeLayout>
+
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/list"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="3pt"
+                android:layout_marginRight="3pt"
+                android:layout_marginTop="10pt"
+                tools:listitem="@layout/in_queue_song_view">
+
+            </android.support.v7.widget.RecyclerView>
+
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:visibility="@{viewModel.sessionModel.sessionStatus.equals(SessionStatus.WAITING) ? View.VISIBLE : View.GONE}"
+            tools:visibility="visible">
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="@{viewModel.sessionModel.isHost ? View.VISIBLE : View.GONE}"
+                tools:visibility="gone">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/help_host" />
+
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:visibility="@{!viewModel.sessionModel.isHost ? View.VISIBLE : View.GONE}"
+                tools:visibility="visible">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:text="@string/wait_a_second" />
+
+            </LinearLayout>
+        </LinearLayout>
     </LinearLayout>
-
 </layout>
-
