--- a/Kompose/app/src/main/res/layout/design_client_view.xml
+++ b/Kompose/app/src/main/res/layout/design_client_view.xml
@@ -22,8 +22,7 @@
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:onClick="@{viewHolder.onButtonClick}"
-            />
+            android:onClick="@{viewHolder.onButtonClick}" />
 
     </LinearLayout>
 </layout>
