--- a/Kompose/app/src/main/res/layout/activity_design.xml
+++ b/Kompose/app/src/main/res/layout/activity_design.xml
@@ -17,13 +17,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@{viewModel.client.name}"
-            />
+            android:text="@{viewModel.client.name}" />
 
         <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/list">
+            android:layout_height="wrap_content">
 
         </android.support.v7.widget.RecyclerView>
 
@@ -31,7 +30,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:onClick="onClickFriend"
-            android:text="add clients"/>
+            android:text="add clients" />
     </LinearLayout>
 </layout>
 
