--- a/Kompose/app/src/main/res/layout/activity_settings.xml
+++ b/Kompose/app/src/main/res/layout/activity_settings.xml
@@ -1,147 +1,158 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context="ch.ethz.inf.vs.kompose.SettingsActivity"
+    android:focusableInTouchMode="true"
     android:orientation="vertical"
-    android:focusableInTouchMode="true">
+    tools:context="ch.ethz.inf.vs.kompose.SettingsActivity">
 
-    <ScrollView android:id="@+id/settingsScroller"
+    <ScrollView
+        android:id="@+id/settingsScroller"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="30dp"
-        android:layout_above="@id/textview_settings_error">
+        android:layout_above="@id/textview_settings_error"
+        android:layout_marginTop="30dp">
+
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView android:id="@+id/textview_category_host"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/setting_category_host"
-            android:textColor="@color/colorAccent"
-            android:textStyle="bold"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            app:layout_constraintVertical_bias="0.04"
-            app:layout_constraintHorizontal_bias="0.06"
-            />
-
-            <TextView android:id="@+id/textview_setting_preload"
+            <TextView
+                android:id="@+id/textview_category_host"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:text="@string/setting_category_host"
+                android:textColor="@color/colorAccent"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.06"
+                app:layout_constraintLeft_toLeftOf="parent"
+                app:layout_constraintRight_toRightOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.04" />
+
+            <TextView
+                android:id="@+id/textview_setting_preload"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="15dp"
                 android:text="@string/setting_preload"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="40dp"
-                app:layout_constraintTop_toBottomOf="@id/textview_category_host"
-                app:layout_constraintLeft_toLeftOf="@id/textview_category_host" />
+                app:layout_constraintLeft_toLeftOf="@id/textview_category_host"
+                app:layout_constraintTop_toBottomOf="@id/textview_category_host" />
 
-            <EditText android:id="@+id/edittext_setting_preload"
+            <EditText
+                android:id="@+id/edittext_setting_preload"
                 android:layout_width="50dp"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:inputType="number"
                 android:maxLength="2"
                 android:maxLines="1"
                 android:selectAllOnFocus="true"
-                app:layout_constraintTop_toTopOf="@id/textview_setting_preload"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="@id/textview_setting_preload"
+                app:layout_constraintHorizontal_bias="0.2"
                 app:layout_constraintLeft_toRightOf="@id/textview_setting_preload"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.2" />
+                app:layout_constraintTop_toTopOf="@id/textview_setting_preload" />
 
-            <TextView android:id="@+id/textview_setting_port"
+            <TextView
+                android:id="@+id/textview_setting_port"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="15dp"
                 android:text="@string/setting_port"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="40dp"
-                app:layout_constraintTop_toBottomOf="@id/textview_setting_preload"
-                app:layout_constraintLeft_toLeftOf="@id/textview_category_host" />
+                app:layout_constraintLeft_toLeftOf="@id/textview_category_host"
+                app:layout_constraintTop_toBottomOf="@id/textview_setting_preload" />
 
-            <EditText android:id="@+id/edittext_setting_port"
+            <EditText
+                android:id="@+id/edittext_setting_port"
                 android:layout_width="75dp"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:inputType="number"
                 android:maxLength="5"
                 android:maxLines="1"
                 android:selectAllOnFocus="true"
-                app:layout_constraintTop_toTopOf="@id/textview_setting_port"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="@id/textview_setting_port"
+                app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintLeft_toRightOf="@id/textview_setting_port"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.1" />
+                app:layout_constraintTop_toTopOf="@id/textview_setting_port" />
 
 
-            <TextView android:id="@+id/textview_category_client"
+            <TextView
+                android:id="@+id/textview_category_client"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
                 android:text="@string/setting_category_client"
                 android:textColor="@color/colorAccent"
                 android:textStyle="bold"
-                android:layout_marginTop="30dp"
-                app:layout_constraintTop_toBottomOf="@id/textview_setting_port"
                 app:layout_constraintLeft_toLeftOf="@id/textview_category_host"
-                />
+                app:layout_constraintTop_toBottomOf="@id/textview_setting_port" />
 
-            <TextView android:id="@+id/textview_setting_username"
+            <TextView
+                android:id="@+id/textview_setting_username"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_marginStart="40dp"
+                android:layout_marginTop="15dp"
                 android:text="@string/setting_username"
                 android:textColor="@color/colorBlack"
                 android:textSize="16sp"
-                android:layout_marginTop="15dp"
-                android:layout_marginStart="40dp"
-                app:layout_constraintTop_toBottomOf="@id/textview_category_client"
-                app:layout_constraintLeft_toLeftOf="@id/textview_category_client" />
+                app:layout_constraintLeft_toLeftOf="@id/textview_category_client"
+                app:layout_constraintTop_toBottomOf="@id/textview_category_client" />
 
-            <EditText android:id="@+id/edittext_setting_username"
+            <EditText
+                android:id="@+id/edittext_setting_username"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:textAlignment="center"
                 android:inputType="textNoSuggestions"
                 android:maxLength="50"
                 android:maxLines="1"
                 android:selectAllOnFocus="true"
-                app:layout_constraintTop_toTopOf="@id/textview_setting_username"
+                android:textAlignment="center"
                 app:layout_constraintBottom_toBottomOf="@id/textview_setting_username"
+                app:layout_constraintHorizontal_bias="0.1"
                 app:layout_constraintLeft_toRightOf="@id/textview_setting_username"
                 app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintHorizontal_bias="0.1"/>
+                app:layout_constraintTop_toTopOf="@id/textview_setting_username" />
 
         </android.support.constraint.ConstraintLayout>
     </ScrollView>
-    <Button android:id="@+id/button_settings_confirm"
+
+    <Button
+        android:id="@+id/button_settings_confirm"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_alignParentStart="true"
         android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:onClick="confirmSettings"
-        android:text="@string/settings_confirm"/>
+        android:text="@string/settings_confirm" />
 
-    <TextView android:id="@+id/textview_settings_error"
+    <TextView
+        android:id="@+id/textview_settings_error"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_above="@id/button_settings_confirm"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="-20dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginStart="10dp"
+        android:fontFamily="sans-serif-smallcaps"
         android:text=""
+        android:textAlignment="center"
         android:textColor="@color/colorAccent"
         android:textSize="16sp"
-        android:textStyle="bold"
-        android:layout_marginBottom="-20dp"
-        android:layout_marginStart="10dp"
-        android:layout_marginEnd="10dp"
-        android:fontFamily="sans-serif-smallcaps"
-        android:textAlignment="center"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentEnd="true"/>
+        android:textStyle="bold" />
 </android.widget.RelativeLayout>
