--- a/Kompose/app/src/main/res/layout/session_join_view.xml
+++ b/Kompose/app/src/main/res/layout/session_join_view.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
 
@@ -18,23 +19,27 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/join"
-            android:onClick="@{viewHolder.onJoinClick}"/>
+            android:onClick="@{viewHolder.onJoinClick}"
+            android:text="@string/join" />
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:padding="3pt">
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{viewHolder.item.name}" />
+                android:text="@{viewHolder.item.name}"
+                android:textColor="#000"
+                tools:text="margeths session" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="@{viewHolder.item.name}" />
+                android:text="@{viewHolder.item.name}"
+                tools:text="margareth" />
 
         </LinearLayout>
 
