--- a/Kompose/app/src/main/res/layout/session_join_view.xml
+++ b/Kompose/app/src/main/res/layout/session_join_view.xml
@@ -20,7 +20,9 @@
         <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/russoone_regular"
             android:onClick="@{viewHolder.onJoinClick}"
+            android:textColor="@color/buttonTextColor"
             android:text="@string/join" />
 
         <LinearLayout
@@ -33,13 +35,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{viewHolder.item.name}"
-                android:textColor="#000"
+                android:textColor="@color/textColor"
                 tools:text="margeths session" />
 
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@{viewHolder.item.name}"
+                android:textColor="@color/textColorGray"
                 tools:text="margareth" />
 
         </LinearLayout>
