--- a/Kompose/app/src/main/res/layout/in_queue_song_view.xml
+++ b/Kompose/app/src/main/res/layout/in_queue_song_view.xml
@@ -6,7 +6,10 @@
     <data>
 
         <import type="android.view.View" />
+
         <import type="ch.ethz.inf.vs.kompose.enums.DownloadStatus" />
+
+        <import type="ch.ethz.inf.vs.kompose.enums.SongStatus" />
 
         <variable
             name="viewHolder"
@@ -17,66 +20,90 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#efefef"
         android:orientation="vertical">
 
-        <RelativeLayout
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="3pt"
-            android:background="#efefef"
-            android:orientation="horizontal"
-            android:padding="3pt">
+            android:orientation="vertical"
+            android:visibility="@{viewHolder.item.songStatus == SongStatus.RESOLVING ? View.VISIBLE : View.GONE}"
+            tools:visibility="visible">
 
-            <LinearLayout
-                android:layout_width="match_parent"
+            <TextView
+                android:layout_width="wrap_content"
                 android:layout_height="match_parent"
-                android:layout_toStartOf="@id/down_vote_button"
-                android:orientation="vertical">
+                android:padding="6pt"
+                android:text="@string/song_is_resolved" />
 
-                <TextView
-                    android:id="@+id/currently_playing_title"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@{viewHolder.item.title}"
-                    android:textColor="#000"
-                    tools:text="example text of video" />
+        </LinearLayout>
 
-                <TextView
-                    android:id="@+id/currently_playing_seconds_length"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    tools:text="300"
-                    android:text="@{String.valueOf(viewHolder.item.secondsLength)}" />
 
-            </LinearLayout>
-
-            <ImageButton
-                android:id="@+id/down_vote_button"
-                android:layout_width="50pt"
-                android:layout_height="20pt"
-                android:layout_alignParentEnd="true"
-                android:background="@color/buttonTextColor"
-                android:backgroundTint="@color/buttonTextColor"
-                android:onClick="@{viewHolder.onDownVoteClick}"
-                android:tint="@color/buttonColor"
-                app:srcCompat="@android:drawable/arrow_down_float"
-                android:contentDescription="@string/downvote_button" />
-
-        </RelativeLayout>
-
-        <ProgressBar
-            android:visibility="@{viewHolder.item.downloadStatus == DownloadStatus.STARTED ? View.VISIBLE : View.GONE}"
-            android:id="@+id/my_seek"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:progress="@{viewHolder.item.downloadProgress}"
-            tools:progress="25"
-            tools:visibility="visible"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:indeterminateOnly="false"
-            android:max="100"
-            />
+            android:orientation="vertical"
+            android:visibility="@{viewHolder.item.songStatus != SongStatus.RESOLVING ? View.VISIBLE : View.GONE}"
+            tools:visibility="gone">
 
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="3pt"
+                android:orientation="horizontal"
+                android:padding="3pt">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:layout_toStartOf="@id/down_vote_button"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/currently_playing_title"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{viewHolder.item.title}"
+                        android:textColor="#000"
+                        tools:text="example text of video" />
+
+                    <TextView
+                        android:id="@+id/currently_playing_seconds_length"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="@{String.valueOf(viewHolder.item.secondsLength)}"
+                        tools:text="300" />
+
+                </LinearLayout>
+
+                <ImageButton
+                    android:id="@+id/down_vote_button"
+                    android:layout_width="50pt"
+                    android:layout_height="20pt"
+                    android:layout_alignParentEnd="true"
+                    android:background="@color/buttonTextColor"
+                    android:backgroundTint="@color/buttonTextColor"
+                    android:contentDescription="@string/downvote_button"
+                    android:onClick="@{viewHolder.onDownVoteClick}"
+                    android:tint="@color/buttonColor"
+                    app:srcCompat="@android:drawable/arrow_down_float" />
+
+            </RelativeLayout>
+
+            <ProgressBar
+                android:id="@+id/my_seek"
+                style="?android:attr/progressBarStyleHorizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:indeterminateOnly="false"
+                android:max="100"
+                android:progress="@{viewHolder.item.downloadProgress}"
+                android:visibility="@{viewHolder.item.downloadStatus == DownloadStatus.STARTED ? View.VISIBLE : View.GONE}"
+                tools:progress="25"
+                tools:visibility="visible" />
+
+        </LinearLayout>
     </LinearLayout>
+
 
 </layout>
