--- a/Kompose/app/src/main/res/layout/activity_main.xml
+++ b/Kompose/app/src/main/res/layout/activity_main.xml
@@ -1,257 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
-            name="title"
-            type="String" />
-        <variable
-            name="text1"
-            type="String" />
-        <variable
-            name="subText1"
-            type="String" />
-        <variable
-            name="text2"
-            type="String" />
-        <variable
-            name="subText2"
-            type="String" />
+            name="viewModel"
+            type="ch.ethz.inf.vs.kompose.view.viewmodel.MainViewModel" />
     </data>
 
-    <android.support.constraint.ConstraintLayout
-        android:id="@+id/linearLayout2"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/colorAccent"
-        android:orientation="vertical"
-        android:padding="0dp">
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
 
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline1"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.24" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline2"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.47" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline3"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.74" />
-
-        <android.support.constraint.Guideline
-            android:id="@+id/guideline4"
-            android:layout_width="wrap_content"
-            android:layout_height="1dp"
-            android:orientation="horizontal"
-            app:layout_constraintGuide_percent="0.9" />
-
-        <ImageView
-            android:id="@+id/imageView9"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:adjustViewBounds="true"
-            android:maxHeight="512dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_logo_wide"
-            app:layout_constraintBottom_toTopOf="@+id/guideline1"
-            app:layout_constraintDimensionRatio="25:8"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            tools:layout_conversion_absoluteHeight="113dp"
-            tools:layout_conversion_absoluteWidth="354dp" />
-
-
-        <ImageView
-            android:id="@+id/imageView10"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:adjustViewBounds="true"
-            android:maxHeight="160dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_kompose_group"
-            app:layout_constraintBottom_toTopOf="@+id/guideline2"
-            app:layout_constraintDimensionRatio="243:184"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline1"
-            tools:layout_conversion_absoluteHeight="93dp"
-            tools:layout_conversion_absoluteWidth="126dp" />
-
-        <Button
-            android:id="@+id/button_main_join"
-            android:layout_width="0dp"
+        <EditText
+            android:id="@+id/editText"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginTop="8dp"
-            android:background="@color/buttonColor"
-            android:fontFamily="@font/russoone_regular"
-            android:onClick="callConnectActivity"
-            android:text="Join Party"
-            android:textColor="@color/buttonTextColor"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView11"
-            app:layout_constraintEnd_toEndOf="@+id/button_main_create"
-            app:layout_constraintStart_toStartOf="@+id/textView13"
-            app:layout_constraintTop_toTopOf="@+id/imageView11"
-            tools:layout_conversion_absoluteHeight="48dp"
-            tools:layout_conversion_absoluteWidth="88dp" />
+            android:hint="@string/your_name"
+            android:inputType="textPersonName" />
 
-        <ImageView
-            android:id="@+id/imageView11"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginStart="8dp"
-            android:adjustViewBounds="true"
-            android:maxHeight="160dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_kompose_join_group"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintDimensionRatio="90:37"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/button_main_join"
-            app:layout_constraintTop_toBottomOf="@+id/guideline2"
-            tools:layout_conversion_absoluteHeight="80dp"
-            tools:layout_conversion_absoluteWidth="196dp" />
-
-        <Button
-            android:id="@+id/button_main_create"
-            android:layout_width="0dp"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/buttonColor"
-            android:fontFamily="@font/russoone_regular"
-            android:onClick="callCreationActivity"
-            android:text="Create Party"
-            android:textColor="@color/buttonTextColor"
-            app:layout_constraintBottom_toBottomOf="@+id/imageView12"
-            app:layout_constraintStart_toStartOf="@+id/textView13"
-            app:layout_constraintTop_toTopOf="@+id/imageView12"
-            tools:layout_conversion_absoluteHeight="48dp"
-            tools:layout_conversion_absoluteWidth="107dp" />
+            android:weightSum="3">
 
-        <ImageView
-            android:id="@+id/imageView12"
-            android:layout_width="0dp"
-            android:layout_height="0dp"
-            android:layout_marginStart="8dp"
-            android:adjustViewBounds="true"
-            android:maxHeight="120dp"
-            android:scaleType="fitXY"
-            android:src="@drawable/ic_kompose_create"
-            app:layout_constraintBottom_toTopOf="@+id/guideline4"
-            app:layout_constraintDimensionRatio="1:1"
-            app:layout_constraintStart_toEndOf="@+id/button_main_create"
-            app:layout_constraintTop_toTopOf="@+id/guideline3"
-            tools:layout_conversion_absoluteHeight="96dp"
-            tools:layout_conversion_absoluteWidth="103dp" />
+            <Button
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/list"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:listitem="@layout/session_join_view">
+
+        </android.support.v7.widget.RecyclerView>
 
 
-        <Button
-            android:id="@+id/button_main_history"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:background="@color/colorAccent"
-            android:fontFamily="@font/russoone_regular"
-            android:onClick="viewHistoryFromTitle"
-            android:stateListAnimator="@null"
-            android:text="View History"
-            android:textColor="@color/textColor"
-            android:visibility="visible"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/guideline4"
-            tools:layout_conversion_absoluteHeight="48dp"
-            tools:layout_conversion_absoluteWidth="106dp" />
-
-        <TextView
-            android:id="@+id/textView11"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="8dp"
-            android:layout_marginEnd="8dp"
-            android:layout_marginStart="8dp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@{title}"
-            android:textColor="@color/textColor"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline1"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_conversion_absoluteHeight="22dp"
-            tools:layout_conversion_absoluteWidth="1dp" />
-
-        <TextView
-            android:id="@+id/textView12"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@{text1}"
-            android:textColor="@color/textColor"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView13"
-            app:layout_constraintStart_toStartOf="parent"
-            tools:layout_conversion_absoluteHeight="28dp"
-            tools:layout_conversion_absoluteWidth="1dp" />
-
-        <TextView
-            android:id="@+id/textView13"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@{subText1}"
-            android:textColor="@color/textColor"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/button_main_join"
-            app:layout_constraintStart_toStartOf="@+id/textView12"
-            tools:layout_conversion_absoluteHeight="22dp"
-            tools:layout_conversion_absoluteWidth="1dp" />
-
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@{text2}"
-            android:textColor="@color/textColor"
-            android:textSize="18sp"
-            app:layout_constraintBottom_toTopOf="@+id/guideline3"
-            app:layout_constraintStart_toStartOf="@+id/textView12"
-            tools:layout_conversion_absoluteHeight="28dp"
-            tools:layout_conversion_absoluteWidth="1dp" />
-
-        <TextView
-            android:id="@+id/textView15"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:fontFamily="@font/opensans_regular"
-            android:text="@{subText2}"
-            android:textColor="@color/textColor"
-            android:textSize="14sp"
-            app:layout_constraintBottom_toTopOf="@+id/button_main_create"
-            app:layout_constraintStart_toStartOf="@+id/textView14"
-            tools:layout_conversion_absoluteHeight="22dp"
-            tools:layout_conversion_absoluteWidth="1dp" />
-
-    </android.support.constraint.ConstraintLayout>
+    </LinearLayout>
 </layout>
 
