Add nicer downvote button

--- a/Kompose/app/src/main/res/layout/in_queue_song_view.xml
+++ b/Kompose/app/src/main/res/layout/in_queue_song_view.xml
@@ -76,17 +76,19 @@
 
                 </LinearLayout>
 
-                <ImageButton
+                <TextView
                     android:id="@+id/down_vote_button"
-                    android:layout_width="50pt"
-                    android:layout_height="20pt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerVertical="true"
                     android:layout_alignParentEnd="true"
-                    android:background="@color/buttonTextColor"
-                    android:backgroundTint="@color/buttonTextColor"
-                    android:contentDescription="@string/downvote_button"
+                    android:layout_marginEnd="8sp"
+                    android:textSize="24sp"
+                    android:clickable="true"
+                    android:focusable="true"
                     android:onClick="@{viewHolder.onDownVoteClick}"
-                    android:tint="@color/buttonColor"
-                    app:srcCompat="@android:drawable/arrow_down_float" />
+                    android:text="@string/downvote_icon_cross"
+                    android:fontFamily="@font/androidicons" />
 
             </RelativeLayout>
 
